# mocking

./: .gitmodules  CMakeLists.txt
src/: databaseinterface.h  server.cpp  server.hpp  server_crtp.h  serverimpl.h  serverinterface.h
tests/: benchmark.cpp  benchmark_mocks.cpp  databasemock.hpp  interface_mocking.cpp  servermock.hpp
